ffi/poc/cpp/corpus/nounk/include/ak_abi.h

/* ---- section 4: common vocabulary (plan.FIXED) --------------------------------- */
typedef struct ak_enc_ctx ak_enc_ctx;
typedef struct ak_dec_ctx ak_dec_ctx;
/* ABI v1 section 4: source code units -> UTF-8 into dst; returns bytes written or an error. */
typedef int32_t (*ak_transcode_fn)(const void *src, size_t len, uint8_t *dst, int32_t cap, ak_grow_fn grow, void *sink);
/* ABI v1 section 6: a host-driven loop over one repeated/packed/map field. */
typedef int32_t (*ak_loop_f)(ak_enc_ctx *ctx, const void *obj, int64_t token);
/* ABI v1 section 4, encode: a blob as DATA in the group. `len` counts SOURCE code units; `tc == NULL` means the field is ABSENT. */
struct ak_str {
  const void *data;
  size_t len;
  ak_transcode_fn tc;
};
typedef struct ak_str ak_str;
/* Decode group for `ResultRaw`. */
struct ak_dfix_ResultRaw {
  struct ak_span session_id;
  struct ak_span name;
  struct ak_span owner_task_id;
  int32_t status;
  struct ak_dfix_Timestamp created_at;
  struct ak_dfix_Timestamp completed_at;
  struct ak_span result_id;
  int64_t size;
  struct ak_span created_by;
  struct ak_span opaque_id;
  uint8_t manual_deletion;
  uint32_t presence;
};
/* Encode group for `ListResultsResponse`. */
struct ak_efix_ListResultsResponse {
  int32_t page;
  int32_t total;
  uint32_t presence;
};
/* Decode group for `ListResultsResponse`. */
struct ak_dfix_ListResultsResponse {
  int32_t page;
  int32_t total;
  uint32_t presence;
};
/* Encode vtable for `ListResultsResponse`. */
struct ak_evt_ListResultsResponse {
  ak_loop_f loop_results;
};
/* Decode vtable for `ListResultsResponse` (the push family, ABI v1 section 7.1). */
struct ak_dvt_ListResultsResponse {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_ListResultsResponse *);
  void (*add_results)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_ResultRaw *, int32_t);
};
intptr_t ak_encode_ListResultsResponse(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_ListResultsResponse *vt, const struct ak_efix_ListResultsResponse *fix);
int32_t ak_decode_ListResultsResponse(ak_dec_ctx *ctx, void *obj, const uint8_t *buf, size_t len, const struct ak_dvt_ListResultsResponse *vt);
int32_t ak_parse_ListResultsResponse(ak_dec_ctx *ctx, const uint8_t *buf, size_t len);
int32_t ak_blob_run(ak_enc_ctx *ctx, const struct ak_str *elems, int32_t n);
int32_t ak_run_i32(ak_enc_ctx *ctx, const int32_t *p, size_t n);
int32_t ak_run_i64(ak_enc_ctx *ctx, const int64_t *p, size_t n);
int32_t ak_run_f64(ak_enc_ctx *ctx, const double *p, size_t n);
int32_t ak_run_u8(ak_enc_ctx *ctx, const uint8_t *p, size_t n);
size_t ak_bdr_footprint(const ak_dec_ctx *ctx);
intptr_t ak_bdr_drain(ak_dec_ctx *ctx, uint8_t *dst, size_t cap, size_t *cursor);
int32_t ak_bdr_ptr(ak_dec_ctx *ctx, const uint8_t * *ptr, size_t *len);
void ak_bdr_reset(ak_dec_ctx *ctx);
/* Counting build: the host reports the forward crossings of a drain loop. */
void ak_bdr_count_forward(ak_dec_ctx *ctx, uint32_t n);
/* layout */
/* ABI v1 section 10: the core's own view of every group layout. */
size_t ak_layout_facts(uint32_t *out, size_t cap);