ffi/poc/csharp/src/Harness/GeneratedNounk/Abi.cs

#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_bdr_footprint", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern nuint ak_bdr_footprint__raw(IntPtr ctx);
    internal static long N_ak_bdr_footprint;
    internal static nuint ak_bdr_footprint(IntPtr ctx) { System.Threading.Interlocked.Increment(ref N_ak_bdr_footprint); return ak_bdr_footprint__raw(ctx); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nuint ak_bdr_footprint(IntPtr ctx);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nuint ak_bdr_footprint(IntPtr ctx);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_bdr_drain", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern nint ak_bdr_drain__raw(IntPtr ctx, byte* dst, nuint cap, nuint* cursor);
    internal static long N_ak_bdr_drain;
    internal static nint ak_bdr_drain(IntPtr ctx, byte* dst, nuint cap, nuint* cursor) { System.Threading.Interlocked.Increment(ref N_ak_bdr_drain); return ak_bdr_drain__raw(ctx, dst, cap, cursor); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nint ak_bdr_drain(IntPtr ctx, byte* dst, nuint cap, nuint* cursor);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nint ak_bdr_drain(IntPtr ctx, byte* dst, nuint cap, nuint* cursor);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_bdr_ptr", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_bdr_ptr__raw(IntPtr ctx, byte** ptr, nuint* len);
    internal static long N_ak_bdr_ptr;
    internal static int ak_bdr_ptr(IntPtr ctx, byte** ptr, nuint* len) { System.Threading.Interlocked.Increment(ref N_ak_bdr_ptr); return ak_bdr_ptr__raw(ctx, ptr, len); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_bdr_ptr(IntPtr ctx, byte** ptr, nuint* len);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_bdr_ptr(IntPtr ctx, byte** ptr, nuint* len);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_bdr_reset", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern void ak_bdr_reset__raw(IntPtr ctx);
    internal static long N_ak_bdr_reset;
    internal static void ak_bdr_reset(IntPtr ctx) { System.Threading.Interlocked.Increment(ref N_ak_bdr_reset); ak_bdr_reset__raw(ctx); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial void ak_bdr_reset(IntPtr ctx);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern void ak_bdr_reset(IntPtr ctx);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_bdr_count_forward", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern void ak_bdr_count_forward__raw(IntPtr ctx, uint n);
    internal static long N_ak_bdr_count_forward;
    internal static void ak_bdr_count_forward(IntPtr ctx, uint n) { System.Threading.Interlocked.Increment(ref N_ak_bdr_count_forward); ak_bdr_count_forward__raw(ctx, n); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial void ak_bdr_count_forward(IntPtr ctx, uint n);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern void ak_bdr_count_forward(IntPtr ctx, uint n);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_layout_facts", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern nuint ak_layout_facts__raw(uint* @out, nuint cap);
    internal static long N_ak_layout_facts;
    internal static nuint ak_layout_facts(uint* @out, nuint cap) { System.Threading.Interlocked.Increment(ref N_ak_layout_facts); return ak_layout_facts__raw(@out, cap); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nuint ak_layout_facts(uint* @out, nuint cap);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nuint ak_layout_facts(uint* @out, nuint cap);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_blob_run", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_blob_run__raw(IntPtr ctx, ak_str* elems, int n);
    internal static long N_ak_blob_run;
    internal static int ak_blob_run(IntPtr ctx, ak_str* elems, int n) { System.Threading.Interlocked.Increment(ref N_ak_blob_run); return ak_blob_run__raw(ctx, elems, n); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_blob_run(IntPtr ctx, ak_str* elems, int n);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_blob_run(IntPtr ctx, ak_str* elems, int n);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_run_i32", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_run_i32__raw(IntPtr ctx, int* p, nuint n);
    internal static long N_ak_run_i32;
    internal static int ak_run_i32(IntPtr ctx, int* p, nuint n) { System.Threading.Interlocked.Increment(ref N_ak_run_i32); return ak_run_i32__raw(ctx, p, n); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_run_i32(IntPtr ctx, int* p, nuint n);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_run_i32(IntPtr ctx, int* p, nuint n);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_run_i64", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_run_i64__raw(IntPtr ctx, long* p, nuint n);
    internal static long N_ak_run_i64;
    internal static int ak_run_i64(IntPtr ctx, long* p, nuint n) { System.Threading.Interlocked.Increment(ref N_ak_run_i64); return ak_run_i64__raw(ctx, p, n); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_run_i64(IntPtr ctx, long* p, nuint n);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_run_i64(IntPtr ctx, long* p, nuint n);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_run_f64", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_run_f64__raw(IntPtr ctx, double* p, nuint n);
    internal static long N_ak_run_f64;
    internal static int ak_run_f64(IntPtr ctx, double* p, nuint n) { System.Threading.Interlocked.Increment(ref N_ak_run_f64); return ak_run_f64__raw(ctx, p, n); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_run_f64(IntPtr ctx, double* p, nuint n);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_run_f64(IntPtr ctx, double* p, nuint n);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_run_u8", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_run_u8__raw(IntPtr ctx, byte* p, nuint n);
    internal static long N_ak_run_u8;
    internal static int ak_run_u8(IntPtr ctx, byte* p, nuint n) { System.Threading.Interlocked.Increment(ref N_ak_run_u8); return ak_run_u8__raw(ctx, p, n); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_run_u8(IntPtr ctx, byte* p, nuint n);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_run_u8(IntPtr ctx, byte* p, nuint n);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_encode_ListResultsResponse", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern nint ak_encode_ListResultsResponse__raw(void* obj, IntPtr ctx, ak_evt_ListResultsResponse* vt, ak_efix_ListResultsResponse* fix);
    internal static long N_ak_encode_ListResultsResponse;
    internal static nint ak_encode_ListResultsResponse(void* obj, IntPtr ctx, ak_evt_ListResultsResponse* vt, ak_efix_ListResultsResponse* fix) { System.Threading.Interlocked.Increment(ref N_ak_encode_ListResultsResponse); return ak_encode_ListResultsResponse__raw(obj, ctx, vt, fix); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nint ak_encode_ListResultsResponse(void* obj, IntPtr ctx, ak_evt_ListResultsResponse* vt, ak_efix_ListResultsResponse* fix);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nint ak_encode_ListResultsResponse(void* obj, IntPtr ctx, ak_evt_ListResultsResponse* vt, ak_efix_ListResultsResponse* fix);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_decode_ListResultsResponse", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_decode_ListResultsResponse__raw(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_ListResultsResponse* vt);
    internal static long N_ak_decode_ListResultsResponse;
    internal static int ak_decode_ListResultsResponse(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_ListResultsResponse* vt) { System.Threading.Interlocked.Increment(ref N_ak_decode_ListResultsResponse); return ak_decode_ListResultsResponse__raw(ctx, obj, buf, len, vt); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_decode_ListResultsResponse(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_ListResultsResponse* vt);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_decode_ListResultsResponse(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_ListResultsResponse* vt);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_parse_ListResultsResponse", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_parse_ListResultsResponse__raw(IntPtr ctx, byte* buf, nuint len);
    internal static long N_ak_parse_ListResultsResponse;
    internal static int ak_parse_ListResultsResponse(IntPtr ctx, byte* buf, nuint len) { System.Threading.Interlocked.Increment(ref N_ak_parse_ListResultsResponse); return ak_parse_ListResultsResponse__raw(ctx, buf, len); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_parse_ListResultsResponse(IntPtr ctx, byte* buf, nuint len);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_parse_ListResultsResponse(IntPtr ctx, byte* buf, nuint len);
